*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.29 ===
* Implemented AudioEnvelope widget and it's integration into AudioSample.
* Implemented ws::IDisplay::get_file_descriptor method for obtaining event loop
  descriptor for Unix-based systems that use X11 protocol

=== 1.0.28 ===
* Added support of background color, brightness and background brightness for
  inactive widgets.
* Activity property is now accessible for any widget.
* Implemented Overlay widget.
* Added MacOS dependencies.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.27 ===
* Implemented OpenGL drawing surface supporf for X11 protocol. Can be disabled
  by setting LSP_WS_LIB_GLXSURFACE=off environment variable.
* Improved size estimation algorithm for tk::Label widget.
* Added inactive state and colors for following widgets:
  * tk::Button;
  * tk::CheckBox;
  * tk::ComboBox;
  * tk::Edit;
  * tk::Fader;
  * tk::FileButton;
  * tk::Fraction;
  * tk::Indicator;
  * tk::Knob;
  * tk::Led;
  * tk::ListBox;
  * tk::ListBoxItem;
  * tk::MenuItem;
  * tk::ProgressBar;
  * tk::RadioButton;
  * tk::ScrollBar;
  * tk::Tab;
  * tk::TabItem.
* Removed tk::Switch widget as being outdated.
* Optimized surface drawing and sizing algorithm.
* Rendering optimizations in widget containers.
* Removed outdated RackEars widget.
* Updated widget drawing code to match new interface of ws::IGradient.
* Updated module versions in dependencies.

=== 1.0.26 ===
* Removed internal key auto-repeat simulation for tk::ListBox.
* Updated text clipping algorithm for tk::Button.
* Fixed bun in tk::ListBox widget which didn't allow to scroll the list box
  when using keyboard keys.
* Implemented TabGroup widget.
* Implemented shortcut handling mechancs by tk::Window.
* Small bugfix in LedMeterChannel related to header display.