@@ -58,6 +58,7 @@ namespace lsp
                 prop::Font                  sFont;          // Font parameters
                 prop::Boolean               sHover;         // Hover enable
                 prop::String                sText;          // Text to display
+                prop::Boolean               sTextClip;      // Clip text
                 prop::SizeConstraints       sConstraints;   // Size constraints
                 prop::Padding               sIPadding;      // Internal padding
             LSP_TK_STYLE_DEF_END
@@ -108,6 +109,7 @@ namespace lsp
                 prop::Font                  sFont;          // Font parameters
                 prop::Boolean               sHover;         // Hover enable
                 prop::String                sText;          // Text to display
+                prop::Boolean               sTextClip;      // Clip text
                 prop::SizeConstraints       sConstraints;   // Size constraints
                 prop::Padding               sIPadding;      // Internal padding
                 prop::WidgetPtr<Menu>       sPopup;         // Popup menu
@@ -153,6 +155,7 @@ namespace lsp
                 LSP_TK_PROPERTY(Color,              inactive_hover_color,   &vColors[LBL_3].sColor)
                 LSP_TK_PROPERTY(Boolean,            hover,                  &sHover)
                 LSP_TK_PROPERTY(String,             text,                   &sText)
+                LSP_TK_PROPERTY(Boolean,            text_clip,              &sTextClip)
                 LSP_TK_PROPERTY(SizeConstraints,    constraints,            &sConstraints)
                 LSP_TK_PROPERTY(Padding,            ipadding,               &sIPadding)
                 LSP_TK_PROPERTY(WidgetPtr<Menu>,    popup,                  &sPopup)
